# d3d8-native

./: CMakeLists.txt  README.md
compat/include/: ntstatus.h  rpc.h  winbase.h  windows.h
compat/include/internal/: compat_atomic.h  compat_gdi.h  compat_mutex.h  compat_thread.h
compat/include/vkd3d/: config.h
compat/include/wine/: debug.h
compat/src/: memory.c  messages.c  module.c  registry.c  resource.c  synchronization.c  system.c  wgl.c  windowing.c
include/: d3dcommon.h  objidl.h  objidlbase.h  unknwn.h  wtypes.h
vkd3d_compat/: vkd3d.c
wined3d/: adapter_gl.c  buffer.c  cs.c  decoder.c  device.c  directx.c  query.c  sampler.c  swapchain.c  utils.c  view.c  wined3d_main.c
